force-app/main/default/objects/Gx_Feedback_Setting__mdt/Gx_Feedback_Setting__mdt.object-meta.xml
<CustomObject>
    <label>GX Feedback Setting</label>
    <pluralLabel>GX Feedback Settings</pluralLabel>
</CustomObject>