force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Alert_Copy_Email__c.field-meta.xml
<CustomField>
    <fullName>Alert_Copy_Email__c</fullName>
    <description
  >Team address copied on every detractor alert, and the only recipient when a trip has no travel designer (and always, in a sandbox). Blank: designers only, and no alerts at all from a sandbox.</description>
    <label>Alert Copy Email</label>
    <type>Email</type>
</CustomField>