force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Detractor_Alerts_On__c.field-meta.xml
<CustomField>
    <fullName>Detractor_Alerts_On__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >When ticked, a guest who answers the recommendation question with 6 or below triggers an immediate email to the trip's travel designer, copied to Alert Copy Email. In a sandbox the designer is never emailed: the alert goes to Alert Copy Email only, so testing cannot reach colleagues.</description>
    <label>Detractor Alerts On</label>
    <type>Checkbox</type>
</CustomField>