force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Dispatch_Delay_Hours__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Delay_Hours__c</fullName>
    <description
  >How long to wait after a trip ends before the feedback invitation is sent. Measured from the start of End_Date__c. Blank or zero sends as soon as the job runs.</description>
    <label>Dispatch Delay (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>