force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Google_Maps_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_URL__c</fullName>
    <description
  >Where promoters are sent to leave a public Google review.</description>
    <label>Google Maps URL</label>
    <type>Url</type>
</CustomField>