force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Link_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Link_Validity_Days__c</fullName>
    <description
  >How many days a feedback link keeps working, counted from the moment the guest was last asked (Survey_Sent_On__c), so a reminder gives them a fresh window rather than the tail of an old one. Falls back to counting from the trip end for bookings invited before that field existed. Blank or zero means links never expire.</description>
    <label>Link Validity (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>