force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Max_Trip_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Trip_Age_Days__c</fullName>
    <description
  >A trip that ended more than this many days ago is never invited, whatever Survey Start Date says. A backstop: if the start date is left too early or the nightly job is paused and later resumed, the worst case is a few weeks of recent guests rather than the whole history. Feedback on a trip months old is of little use anyway. Must stay comfortably above Dispatch Delay Hours, or trips would age out before they are ever asked. Blank or zero switches the backstop off. Applies to first invitations only.</description>
    <label>Max Trip Age (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>