force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Reminder_Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Delay_Days__c</fullName>
    <description
  >How many days after the invitation to remind a guest who has not answered. Measured from Survey_Sent_On__c. Blank or zero switches reminders off entirely. Only ever one reminder per booking, tracked by Survey_Reminder_Sent__c.</description>
    <label>Reminder Delay (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>