force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <description
  >Org-wide email address the invitation is sent from. Looked up by address rather than by id so the same configuration works in every environment. Falls back to the running user when blank or not found.</description>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>