force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Survey_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_Base_URL__c</fullName>
    <description
  >Public address of the feedback survey page, without query parameters. Differs per environment, which is why it is configuration rather than code.</description>
    <label>Survey Base URL</label>
    <type>Url</type>
</CustomField>