force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Survey_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Start_Date__c</fullName>
    <description
  >The day the survey programme started. Trips that ended before it are never invited, so switching the nightly job on does not email every guest in the booking history. Set it to the go-live date in each org. Blank means no trip is invited at all - a missing setting must fail safe, because failing open is exactly the mass email this exists to prevent. Applies to first invitations only; reminders go to guests who are already in the programme.</description>
    <label>Survey Start Date</label>
    <type>Date</type>
</CustomField>