force-app/main/default/objects/Gx_Feedback_Setting__mdt/fields/Trustpilot_URL__c.field-meta.xml
<CustomField>
    <fullName>Trustpilot_URL__c</fullName>
    <description
  >Where promoters are sent to leave a public Trustpilot review.</description>
    <label>Trustpilot URL</label>
    <type>Url</type>
</CustomField>